tests/codegen/fail/object/derive_wrong_item.rs
use juniper::GraphQLObject;

#[derive(GraphQLObject)]
enum Character {}

fn main() {}
